# PoseMentor

./: .gitignore  Procfile  README.md  admin_console.py  app_demo.py  backend_api.py  download_and_prepare_aist.py  evaluate_model_suite.py  extract_pose_aist2d.py  extract_pose_yolo11.py  inference_pipeline_demo.py  pm  pm.cmd  pm.ps1  posementor  posementor.cmd  posementor_cli.py  prepare_multiview_dataset.py  pyproject.toml  train_3d_lift_demo.py  triangulate_multiview_dataset.py  visualize_multiview_report.py
configs/: data.yaml  datasets.yaml  infer.yaml  local.example.yaml  local.yaml  multiview.yaml  standards.yaml  train.yaml  train_ui_smoke.yaml
configs/calibration/: fourview_template.yaml
docker/: Dockerfile  docker-compose.yml
docs/: CAMERA_ALIGNMENT.md  DATASET_CAPTURE_GUIDE.md  INFRA.md  MODEL_ARTIFACTS.md  QUICKSTART.md  TECHNICAL_ROUTE.md  TRAINING_PIPELINE.md  TROUBLESHOOTING.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: Pose2DViewport.tsx  Pose3DViewport.tsx
scripts/: config_setup.py  launch_macos.sh  launch_windows.ps1  posementor.py  run_deepchecks.py
src/posementor/: __init__.py  cli.py  local_config.py  quality.py  settings.py
tests/: test_aist_alignment.py  test_aist_dataset.py  test_backend_api.py  test_cli_parser.py  test_cli_profiles.py  test_command_runner.py  test_download_and_prepare_aist.py  test_extract_pose_aist2d.py  test_job_store.py  test_local_config.py  test_math3d.py  test_multiview_alignment.py  test_realtime_coach_model.py
(+32 files in other folders)
